--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@react-google-maps/api": "^2.19.2",
     "@smastrom/react-rating": "^1.4.0",
     "firebase": "^10.7.1",
     "localforage": "^1.10.0",
@@ -22,6 +23,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.20.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.2",
