--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emailjs/browser": "^3.11.0",
     "@react-google-maps/api": "^2.19.2",
     "@smastrom/react-rating": "^1.4.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.3.0",
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.4",
     "firebase": "^10.7.1",
